--- a/MORAES-SALGADOS-FATEC/MORAES-SALGADOS-FATEC/exetos/prontosub/responsivo_manual/index.html
+++ b/MORAES-SALGADOS-FATEC/MORAES-SALGADOS-FATEC/exetos/prontosub/responsivo_manual/index.html
@@ -27,56 +27,49 @@
 		<a href="./index.html">Inicio</a>
 		<a href="#">Sobre</a>
 		<a href="#">Contato</a>
-      <a href="#" class="loginBtn">Login</a>
 	</nav>
 </header>
 
 <main>
 <div class="container">
 
-   <h3 class="title"> Aproveite nossos produtos </h3>
+   <h3 class="title"> organic products </h3>
 
    <div class="products-container">
       <div class="product" data-name="p-1">
-         <img src="./img/coxinha.jpeg" alt="">
-         <h3>Coxinhas</h3>
-         <div class="price">R$5,OO unid.</div>
+         <img src="images/1.png" alt="">
+         <h3>strawberries</h3>
+         <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-2">
-         <img src="./img/bolinho.jpeg" alt="">
-         <h3>Bolinhos</h3>
-         <div class="price">R$5,OO unid.</div>
+         <img src="images/2.png" alt="">
+         <h3>onions</h3>
+         <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-3">
-         <img src="./img/Rissoles .jpeg" alt="">
-         <h3>Risoles</h3>
-         <div class="price">R$5,OO unid.</div>
+         <img src="images/3.png" alt="">
+         <h3>tomatoes</h3>
+         <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-4">
-         <img src="./img/Kibe.jpeg" alt="">
-         <h3>Kibe</h3>
-         <div class="price">R$5,OO unid.</div>
+         <img src="images/4.png" alt="">
+         <h3>brinjal</h3>
+         <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-5">
-         <img src="./img/salsicha.jpeg" alt="">
-         <h3>Salsicha</h3>
-         <div class="price">R$5,OO unid.</div>
+         <img src="images/5.png" alt="">
+         <h3>broccoli</h3>
+         <div class="price">$2.00</div>
       </div>
 
       <div class="product" data-name="p-6">
-         <img src="./img/Empada.jpeg" alt="">
-         <h3>Empadinha</h3>
-         <div class="price">R$5,OO unid.</div>
-      </div>
-
-      <div class="product" data-name="p-6">
-         <img src="./img/croquete.png" alt="">
-         <h3>Croquete</h3>
-         <div class="price">R$5,OO unid.</div>
+         <img src="images/6.png" alt="">
+         <h3>potatoes</h3>
+         <div class="price">$2.00</div>
       </div>
 
    </div>
@@ -87,8 +80,8 @@
 
    <div class="preview" data-target="p-1">
       <i class="fas fa-times"></i>
-      <img src="./img/coxinha.jpeg" alt="">
-      <h3>Coxinhas</h3>
+      <img src="images/1.png" alt="">
+      <h3>organic strawberries</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
          <i class="fas fa-star"></i>
@@ -98,17 +91,17 @@
          <span>( 250 )</span>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-      <div class="price">R$5,OO unid.</div>
+      <div class="price">$2.00</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
-         <button class="btnFechar">Fechar</button>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
+         <button class="btnFechar" >Fechar</button>
       </div>
    </div>
 
    <div class="preview" data-target="p-2">
       <i class="fas fa-times"></i>
-      <img src="./img/bolinho.jpeg" alt=""> 
+      <img src="images/2.png" alt="">
       <h3>organic onions</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -119,17 +112,17 @@
          <span>( 250 )</span>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-      <div class="price">R$5,OO unid.</div>
+      <div class="price">$2.00</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
 
    <div class="preview" data-target="p-3">
       <i class="fas fa-times"></i>
-      <img src="./img/Rissoles .jpeg" alt="">
+      <img src="images/3.png" alt="">
       <h3>organic tomatoes</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -140,17 +133,17 @@
          <span>( 250 )</span>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-      <div class="price">R$5,OO unid.</div>
+      <div class="price">$2.00</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
 
    <div class="preview" data-target="p-4">
       <i class="fas fa-times"></i>
-      <img src="./img/Kibe.jpeg" alt="">
+      <img src="images/4.png" alt="">
       <h3>organic brinjal</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -161,17 +154,17 @@
          <span>( 250 )</span>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-      <div class="price">R$5,OO unid.</div>
+      <div class="price">$2.00</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
 
    <div class="preview" data-target="p-5">
       <i class="fas fa-times"></i>
-      <img src="./img/salsicha.jpeg" alt="">
+      <img src="images/5.png" alt="">
       <h3>organic broccoli</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -182,17 +175,17 @@
          <span>( 250 )</span>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-      <div class="price">R$5,OO unid.</div>
+      <div class="price">$2.00</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
 
    <div class="preview" data-target="p-6">
       <i class="fas fa-times"></i>
-      <img src="./img/croquete.png" alt="">
+      <img src="images/6.png" alt="">
       <h3>organic potatoes</h3>
       <div class="stars">
          <i class="fas fa-star"></i>
@@ -203,10 +196,10 @@
          <span>( 250 )</span>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-      <div class="price">R$5,OO unid.</div>
+      <div class="price">$2.00</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
@@ -225,9 +218,7 @@
 
 
 	<!--JAVASCRIPT-->
-   <script src="./js/drop.js"></script>
-	<script src="./js/script.js"></script>
-   <script src="./js/responsive.js"></script>
+	<script type="text/javascript" src="./js/script.js"></script>
 
 	<!--JAVASCRIPT BOODSTRAP-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
