--- a/MORAES-SALGADOS-FATEC/MORAES-SALGADOS-FATEC/index.html
+++ b/MORAES-SALGADOS-FATEC/MORAES-SALGADOS-FATEC/index.html
@@ -97,12 +97,17 @@
          <i class="fas fa-star-half-alt"></i>
          <span>( 250 )</span>
       </div>
+         <!-- <select name="select" multiple multiselect-search="true" multiselect-select-all="true" multiselect-max-items="10">
+            <option >ola</option>
+            <option >ola</option>
+            <option >oa</option>
+         </select> -->
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
       <div class="price">R$5,OO unid.</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
-         <button class="btnFechar">Fechar</button>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
+         <button class="btnFechar" >Fechar</button>
       </div>
    </div>
 
@@ -121,8 +126,8 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
       <div class="price">R$5,OO unid.</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
@@ -142,8 +147,8 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
       <div class="price">R$5,OO unid.</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
@@ -163,8 +168,8 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
       <div class="price">R$5,OO unid.</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
@@ -184,8 +189,8 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
       <div class="price">R$5,OO unid.</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
@@ -205,8 +210,8 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
       <div class="price">R$5,OO unid.</div>
       <div class="buttons">
-         <a href="#" class="buy">Comprar</a>
-         <a href="#" class="cart">Minha lista</a>
+         <a href="#" class="buy">buy now</a>
+         <a href="#" class="cart">add to cart</a>
          <button class="btnFechar" >Fechar</button>
       </div>
    </div>
@@ -225,9 +230,8 @@
 
 
 	<!--JAVASCRIPT-->
-   <script src="./js/drop.js"></script>
 	<script src="./js/script.js"></script>
-   <script src="./js/responsive.js"></script>
+   <script src="./js/drop.js"></script>
 
 	<!--JAVASCRIPT BOODSTRAP-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
