--- a/paginas/Login.html
+++ b/paginas/Login.html
@@ -4,19 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--FONT BAXICONS ICON-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+    <!--FONT AWARSOME ICON-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+    <!--BOODSTRAP CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <!--CSS-->
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/login.css">
 
     <title>Usuario LOGIN</title>
 </head>
 <body>
     
-    <div class="backgroud"></div>
+<header>
+    <a href="../index.html" id="logo"><img src="../img/mora.jpg" alt="logo da empresa(coxinha em cima de um livro de receitas)">
+    </a>
+    <button id="openMenu">&#9776;</button>
+    <nav id="menu">
+        <button id="closeMenu">X</button>
+        <a href="../index.html">Inicio</a>
+        <a href="#">Sobre</a>
+        <a href="#">Contato</a>
+        <a href="./Login.html" class="loginBtn">Login</a>
+    </nav>
+</header>
 
-    <div class="login-box">
+<main>
+    <div class="container">
+        <!-- <div class="backgroud"></div> -->
+
+        <div class="login-box">
         <div class="form-login login">
             <form action="#">
                 <h2>LOGIN</h2>
@@ -77,12 +100,16 @@
                 </div>
             </form>
         </div>
-    </div>
+        </div>
+    </div>        
+</main>
     
 </body>
 
 <!--JavaScript-->
 <script src="./js/login.js"></script>
+<script src="../js/script.js"></script>
+<script src="../js/responsive.js"></script>
 
 <!--JavaScript Font Icones-->
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
