--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 <header>
 	<a href="./index.html" id="logo"><img src="./img/mora.jpg" alt="logo da empresa(coxinha em cima de um livro de receitas)">
    </a>
-	<button id="openMenu">&#9776;</button>
+	<button id="openMenu" onclick="abrir()">&#9776;</button>
 	<nav id="menu">
 		<button id="closeMenu">X</button>
 		<a href="./index.html">Inicio</a>
-		<a href="#">Sobre</a>
+		<a href="./sobre.html">Sobre</a>
 		<a href="#">Contato</a>
       <a href="./paginas/Login.html" class="loginBtn">Login</a>
 	</nav>
 </header>
 
-<main>
+<main id="main">
    <div class="container">
 
       <h3 class="title"> Aproveite nossos produtos </h3>
