--- a/sobre.html
+++ b/sobre.html
@@ -4,14 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--FONT AWARSOME ICON-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+	<!--FONT AWARSOME ICON-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 	<!--BOODSTRAP CSS-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<!--CSS-->
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/sobre.css">
 
 	<title>MORAES SALGADOS</title>
 
@@ -40,8 +41,44 @@
 	<br><br>
 
 	<h3 class="title">Algumas das fotos da nossa empresa</h3>
-	<p class="texto-main"><img src="./img/fznd/img1.jpg" alt="aqui entra uma foto do meio de preparo dos salgados"></p>
 
+	<div class="container">
+		<div class="row">
+			<div class="col-sm">
+				<div class="image-cir">
+					<div class="imagem-circulo">
+						<img src="./img/fznd/img1.jpg" alt="ciculo">
+						<span class="spiner-cicle"></span>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm">
+				<div class="image-cir">
+					<div class="imagem-circulo">
+						<img src="./img/fznd/img2.jpg" alt="ciculo">
+						<span class="spiner-cicle"></span>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm">
+				<div class="image-cir">
+					<div class="imagem-circulo">
+						<img src="./img/fznd/img2.jpg" alt="ciculo">
+						<span class="spiner-cicle"></span>
+					</div>
+				</div>
+		  	</div>
+		</div>
+	</div>
+<br>
+	<div class="card" style="width: 18rem;">
+		<img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+		<div class="card-body">
+		  <h5 class="card-title">Título do card</h5>
+		  <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+		  <a href="#" class="btn btn-primary">Visitar</a>
+		</div>
+	  </div>
 	<p class="image-main"><img src="#" alt="aqui entra uma imagem da dona da empresa"></p>
 
    </div>
