--- a/t.html
+++ b/t.html
@@ -1,22 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>testes</title>
+
     <style>
-        select{
-            width: 30em;
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        body {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            min-height: 100vh;
+            background: #3e3e3e;
+        }
+        .quadro{
+            position: relative;
+            height: 400px;
+            width: 400px;
+            top: 50px;
+            max-height: 100vh;
+            background: black;
+        }
+        .quadro span:first-of-type{
+            position: absolute;
+            top: 400px;
+            left: 0;
+            width: 100%;
+            height: 3px;
+            background: linear-gradient(to right, transparent, yellow);
+            animation: anima1 2s linear infinite;
+        }
+        /* .quadro span:nth-of-type(2){
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 3px;
+            height: 100%;
+            background: linear-gradient(to bottom, transparent, yellow);
+            animation: anima2 2s linear infinite;
+        } */
+        /* .quadro span:nth-of-type(3) {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 3px;
+            background: linear-gradient(to left, transparent, yellow);
+            animation: anima3 2s linear infinite;
+        } */
+        .quadro span:last-of-type {
+            position: absolute;
+            top: 0;
+            left: 400px;
+            width: 3px;
+            height: 100%;
+            background: linear-gradient(to top, transparent, yellow);
+            animation: anima4 2s linear infinite;
+        }
+        @keyframes anima1 {
+            0%{
+                transform: translateX(-100%);
+            }
+            100%{
+                transform: translateX(100%);
+            }
+        }
+        @keyframes anima2 {
+            0%{
+                transform: translateY(-100%);
+            }
+            100%{
+                transform: translateY(100%);
+            }
+        }
+        @keyframes anima3 {
+            0%{
+                transform: translateX(100%);
+            }
+            100%{
+                transform: translateX(-100%);
+            }
+        }
+        @keyframes anima4 {
+            0%{
+                transform: translateY(100%);
+            }
+            100%{
+                transform: translateY(-100%);
+            }
         }
     </style>
+
 </head>
 <body>
-    <select name="select" multiple multiselect-search="true"
-    multiselect-select-all="true" multiselect-max-items="10">
-        <option >ola</option>
-        <option >ola</option>
-        <option >oa</option>
-     </select>         
+    
+    <div class="quadro">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
 </body>
-<script src="./css/grop.js"></script>
 </html>
